@@ -1,11 +1,77 @@
 /*
- * CRC32.c - CRC32 calculation routines.
+ * first-pages.c - First pages for MKL27Z256.
+ *
+ * Copyright (C) 2016 Flying Stone Technology
+ * Author: NIIBE Yutaka <gniibe@fsij.org>
+ *
+ * Copying and distribution of this file, with or without modification,
+ * are permitted in any medium without royalty provided the copyright
+ * notice and this notice are preserved.  This file is offered as-is,
+ * without any warranty.
+ *
+ *
+ * First two pages of Flash ROM is difficult to use because of
+ * predefined purposes.  It's defined as a default vector page and
+ * flash configuration page.
+ *
+ * We put something useful to those two pages, together with the
+ * data for predefined purposes.
+ */
+
+
+#include <stdint.h>
+
+extern uint8_t __main_stack_end__;
+
+static void __attribute__ ((naked,section(".flash_config_page")))
+reset (void)
+{
+  uint32_t r3 = 0xe000ed08;
+
+  asm volatile ("str	%2, [%0]\n\t"	  /* Set SCR->VTOR     */
+		"ldr	%0, [%2, #4]\n\t" /* Jump to the entry */
+		"bx	%0\n\t"
+		".align	2\n"
+		: "=r" (r3)
+		: "0" (r3), "r" (0x00000800)
+		: "memory");
+
+  /* Never reach here. */
+}
+
+
+static uint32_t
+stack_entry[] __attribute__ ((section(".first_page.first_words"),used)) = {
+  (uint32_t)(&__main_stack_end__ - 32),
+  (uint32_t)reset,
+};
+
+/*
+ * NOTE: We don't use backdoor comparison key.  The area is used by
+ * CRC32 table.
+ */
+static uint32_t
+flash_config[] __attribute__ ((section(".flash_config"),used)) = {
+  0xffffffff, /* Protection bytes */
+  0xffff3ffe, /* FSEC=0xfe, FOPT=0x3f */
+  /* FOPT=0x3f:
+   * BOOTSRC_SEL=00: Boot from flash
+   */
+  /* FSEC=0xfe:
+   * unsecure
+   */
+};
+
+
+/*
+ * CRC32 calculation routines.
  */
 
 /*
  * Table of CRC32, generated by gen_crc_table.py
  */
-static unsigned int crc32_table[256] = {
+static unsigned int
+crc32_table[256] __attribute__ ((section(".first_page"))) = {
   0x00000000, 0x77073096, 0xee0e612c, 0x990951ba, 0x076dc419, 0x706af48f, 
   0xe963a535, 0x9e6495a3, 0x0edb8832, 0x79dcb8a4, 0xe0d5e91e, 0x97d2d988, 
   0x09b64c2b, 0x7eb17cbd, 0xe7b82d07, 0x90bf1d91, 0x1db71064, 0x6ab020f2, 
@@ -53,24 +119,28 @@ static unsigned int crc32_table[256] = {
 
 static unsigned int crc_reg;
 
+__attribute__ ((section(".flash_config_page")))
 void
 crc32_init (void)
 {
   crc_reg = 0xffffffff;
 }
 
+__attribute__ ((section(".flash_config_page")))
 unsigned int
 crc32_value (void)
 {
   return crc_reg;
 }
 
+__attribute__ ((section(".flash_config_page")))
 void
 crc32_u8 (unsigned char bits_eight)
 {
   crc_reg = crc32_table[(crc_reg & 0xff) ^ bits_eight] ^ (crc_reg >> 8);
 }
 
+__attribute__ ((section(".flash_config_page")))
 void
 crc32_u32 (unsigned int u)
 {
